--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-3.85MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.13MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.44MB/s(Youtube:不良林), server: 120.233.186.204, port: 3382, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.75MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-860.0KB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.13MB/s(Youtube:不良林) 2, server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.82MB/s(Youtube:不良林), server: 152.89.210.105, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
   - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-294.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1005.3KB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.25MB/s(Youtube:不良林), server: 152.89.210.105, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇬🇧 英国-1.78MB/s(Youtube:不良林), server: 152.89.210.105, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇰🇷 韩国-622.2KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-622.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-622.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-622.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-622.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-622.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-622.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-860.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.13MB/s(Youtube:不良林) 2
-      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-294.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1005.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-622.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
