--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.34MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.88MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.56MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-783.1KB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.31MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.59MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-6.36MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.21MB/s(Youtube:不良林), server: shcm.pdjc.cc, port: 42000, type: trojan, password: 8d0db1d1-62a2-4d8b-b272-e4f364e064c6, sni: shcm.pdjc.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.03MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.30MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.25MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-375.8KB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
   - {name: 🇭🇰 香港-1.13MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-375.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-375.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-375.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
@@ -66,6 +66,7 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -73,11 +74,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-375.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
@@ -88,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-375.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
@@ -104,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-375.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
@@ -129,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
       - 🇨🇳 中国-375.8KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.13MB/s(Youtube:不良林)
